--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css" />
-    <title>KarmaSync - Productivity Tracker</title>
+    <title>KarmaSync</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
