Updated content for some components

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#754ea7" />
     <meta
       name="description"
-      content="KarmaSync - Your Personal Productivity Companion"
+      content="KarmaSync - Agile Project Management Made Simple"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
